--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,4 +1,15 @@
+body{
+	margin: 0;
+	padding: 0;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
 
+.row{
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+
+  
 /* Styles for desktop view */
 .container {
     display: flex;
@@ -14,7 +25,7 @@
     position: relative;
     box-sizing: border-box; /* Add this line */
     margin-bottom: 20px; /* Add this line */
-    background-color: lightblue; /* Add this line */
+    background-color: gray; /* Add this line */
     border: 10px solid white; /* Add this line */
 }
 
@@ -23,10 +34,21 @@
     top: 0;
     right: 0;
     margin: 0px; /* Add this line */
-    background-color: lightgreen; /* Add this line */
+    background-color: pink; /* Add this line */
     border: 1px solid black; /* Add this line */
     color: black; /* Add this line */
     font-size: 125%; /* Add this line */
+    padding: 1px;
+}
+
+.background-red {
+    background-color: red;
+}
+.background-yellow {
+    background-color: yellow;
+}
+.background-pink {
+    background-color: pink;
 }
 
 /* Styles for tablet view */
@@ -52,5 +74,6 @@
 .heading {
     text-align: center;
     font-size: 175%; /* Add this line */
+    color: red;
 }
 
