--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -25,8 +25,13 @@ body{
     position: relative;
     box-sizing: border-box; /* Add this line */
     margin-bottom: 20px; /* Add this line */
+    margin: red;
     background-color: gray; /* Add this line */
-    border: 25px solid white; /* Add this line */
+    border: 20px solid white; /* Add this line */
+}
+
+.inner-border {
+    box-shadow: inset 0 0 0 3px  black
 }
 
 .section-title {
@@ -35,7 +40,6 @@ body{
     right: 0;
     margin: 0px; /* Add this line */
     background-color: pink; /* Add this line */
-    border: 2px solid black; /* Add this line */
     color: black; /* Add this line */
     font-size: 125%; /* Add this line */
     padding: 1px 10px;
