--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,31 +1,64 @@
-.container-fluid {
-    padding: 0;
-}
+body {
+    font-size: 16px;
+    color: #fff;
+    font-family: 'Oxygen', sans-serif;
+  }
+  
+  /** HEADER **/
+  #header-nav {    
+    border-radius: 0;
+    border: 0;
+  }
+  
+  #logo-img {
+    background: url('../images/restaurant-logo_large.png') no-repeat;
+    width: 150px;
+    height: 150px;
+    margin: 10px 15px 10px 0;
+  }
+  
+  .navbar-brand {
+    padding-top: 25px;
+  }
+  
+  .navbar-brand h1 { /* Restaurant name */    
+    color: black;
+    font-size: 1.5em;    
+    font-weight: bold;    
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: .75;
+  }
+  
+  .navbar-brand a:hover, .navbar-brand a:focus {
+    text-decoration: none;
+  }
+  
+  #nav-list {
+    margin-top: 10px;    
+  }
+  #nav-list a {
+    color: black;
+    text-align: center;
+  }
+  #nav-list a:hover {
+    background: #E7E7E7;
+  }
+  
+  #collapsable-nav .navbar-nav > li {
+    border-bottom: 1px solid #ddd; /* Add bottom border */   
+  }
 
-#navbar-collapse .navbar-nav {
-    width: 100%; /* Ensure full width */
-}
+  #collapsable-nav .navbar-nav > li:last-child {
+     border-bottom: none; /* Remove bottom border from last item */
+  }
 
-#navbar-collapse .navbar-nav > li {
-    border-bottom: 1px solid #ddd; /* Add bottom border */
-    width: 100%; /* Ensure full width */
-}
-
-#navbar-collapse .navbar-nav > li:last-child {
-    border-bottom: none; /* Remove bottom border from last item */
-}
-
-#navbar-collapse .navbar-nav > li > a {
-    padding: 15px; /* Add padding */
-    display: block; /* Ensure anchor takes full width */
-    text-align: center; /* Center the text */
-    color: #333; /* Text color */
-    text-decoration: none; /* Remove underline */
-    width: 100%; /* Ensure full width */
-    background-color: lightgray
-}
-
-#navbar-collapse .navbar-nav > li > a:hover {
-    background-color: #f8f8f8; /* Background color on hover */
-    color: #000; /* Text color on hover */
-}
+  .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+    border: 1px solid #61122f;
+  }
+  .navbar-header button.navbar-toggle {
+    clear: both;
+    margin-top: -30px;
+  }
+  /* END HEADER */
+  
