--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -47,7 +47,7 @@ body {
   }
 
   .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #61122f;
+    border: 1px solid black
   }
   .navbar-header button.navbar-toggle {
     clear: both;
